--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -11,9 +11,15 @@
 	
     <ui:define name="title"><h:outputText value="#{msgs['title.home']}" /></ui:define>
     
-    <ui:define name="description"><h:outputText value="#{msgs['descr.home']}" /></ui:define>
+    <ui:define name="description"><h:outputText value="#{coreInfo.quote}" /></ui:define>
 
     <ui:define name="body">
-        <p>Work in progress...</p>
+    	<h:panelGroup id="installPanel" rendered="#{not coreInfo.systemInstalled}">
+	        <p>Install...</p>
+    	</h:panelGroup>
+    
+    	<h:panelGroup id="installPanel" rendered="#{coreInfo.systemInstalled}">
+	        <p>Work in progress...</p>
+    	</h:panelGroup>
     </ui:define>
 </ui:composition>
