--- a/WebContent/resources/default/decorator.xhtml
+++ b/WebContent/resources/default/decorator.xhtml
@@ -129,20 +129,20 @@
 						</h:panelGroup>
 						
 						<!-- FIXME: hidden - User Account Menu -->
-						<h:panelGroup rendered="false">
+						<h:panelGroup rendered="#{sessionController.loggedIn}">
 						<li class="dropdown user user-menu">
 							<!-- Menu Toggle Button --> <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <!-- The user image in the navbar--> <img
-								src="#{facesContext.externalContext.requestContextPath}/resources/default/stylesheets/AdminLTE-2.3.0/dist/img/user2-160x160.jpg" class="user-image" alt="User Image" /> <!-- hidden-xs hides the username on small devices so only the image appears. -->
-								Alexander Pierce<span class="hidden-xs"></span>
+								src="#{facesContext.externalContext.requestContextPath}/resources/default/images/blankAvatar.png" class="user-image" alt="User Image" /> <!-- hidden-xs hides the username on small devices so only the image appears. -->
+								<h:outputText value="#{sessionController.currentUser.name}" /><span class="hidden-xs"></span>
 						</a>
 							<ul class="dropdown-menu">
 								<!-- The user image in the menu -->
-								<li class="user-header"><img src="#{facesContext.externalContext.requestContextPath}/resources/default/stylesheets/AdminLTE-2.3.0/dist/img/user2-160x160.jpg" class="img-circle"
+								<li class="user-header"><img src="#{facesContext.externalContext.requestContextPath}/resources/default/images/blankAvatar.png" class="img-circle"
 									alt="User Image" />
-									<p>
-										Alexander Pierce - Web Developer <small>Member since Nov. 2012</small>
+									<p><h:outputText value="#{sessionController.currentUser.name}" />
+										<small><h:outputFormat value="#{msgs['text.memberSince']}"><f:param value="#{sessionController.currentUser.creationDate}" /></h:outputFormat></small>
 									</p></li>
-								<!-- Menu Body -->
+								<!-- Menu Body
 								<li class="user-body">
 									<div class="col-xs-4 text-center">
 										<a href="#">Followers</a>
@@ -153,14 +153,14 @@
 									<div class="col-xs-4 text-center">
 										<a href="#">Friends</a>
 									</div>
-								</li>
+								</li> -->
 								<!-- Menu Footer-->
 								<li class="user-footer">
 									<div class="pull-left">
-										<a href="#" class="btn btn-default btn-flat">Profile</a>
+										<a href="javascript:alert('TODO: implement Edit Profile feature.')" class="btn btn-default btn-flat"><h:outputText value="#{msgs['menu.profile']}" /></a>
 									</div>
 									<div class="pull-right">
-										<a href="#" class="btn btn-default btn-flat">Sign out</a>
+										<a href="#{facesContext.externalContext.requestContextPath}/logout" class="btn btn-default btn-flat"><h:outputText value="#{msgs['menu.logout']}" /></a>
 									</div>
 								</li>
 							</ul>
@@ -229,7 +229,7 @@
 				<ul class="sidebar-menu">
 					<li class="header"><h:outputText value="#{msgs['title.menu']}" /></li>
 					<li><h:commandLink action="#{installSystemController.begin}" rendered="#{not coreInfo.systemInstalled}"><i class="fa fa-cogs"></i> <span><h:outputText value="#{msgsCore['core.menu.installSystem']}" /></span></h:commandLink></li>
-					<li><h:link outcome="core/login/index" rendered="#{coreInfo.systemInstalled}"><i class="fa fa-key"></i> <span><h:outputText value="#{msgsCore['core.menu.login']}" /></span></h:link></li>
+					<li><h:link outcome="/core/login/index" rendered="#{coreInfo.systemInstalled and not sessionController.loggedIn}"><i class="fa fa-key"></i> <span><h:outputText value="#{msgsCore['core.menu.login']}" /></span></h:link></li>
 				</ul>
 				</h:form>
 				<!-- /.sidebar-menu -->
