--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -5,8 +5,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
                 xmlns:jsf="http://xmlns.jcp.org/jsf"
-                template="/resources/templates/#{sessionControl.decorator}/decorator.xhtml">
-
+                template="/resources/#{coreInfo.decorator}/decorator.xhtml">
 
 	<ui:define name="title"><h:outputText value="#{msgs['title.login']}" /></ui:define>
 
