--- a/WebContent/core/manageCourse/form.xhtml
+++ b/WebContent/core/manageCourse/form.xhtml
@@ -59,17 +59,16 @@
 				</ui:decorate>
 			</h:panelGroup>
 					
-			<h:panelGroup id="coordenadorField" rendered="false">
+			<h:panelGroup id="coordinatorField">
 				<ui:decorate template="/resources/sae/formfield.xhtml">
-					<ui:param name="fieldName" value="form:coordenador" />
-					<ui:param name="label" value="#{msgsCore['crud.text.coordenador']}" />
-					<h:selectOneMenu pt:class="form-control"  id="coordenador" disabled="#{manageCourseController.readOnly}"
-									 value="#{manageCourseController.selectedEntity.coordenador}" 
-									 converter="#{coreControl.administradorConverter}" >
-						<f:selectItem itemLabel="#{msgsCore['manageCourseControl.form.assunto.blankOption']}" itemValue="" />
-						<f:selectItems value="#{coreControl.administradores}" var="coordenador" 
+					<ui:param name="fieldName" value="form:coordinator" />
+					<ui:param name="label" value="#{msgsCore['manageCourse.title.coordinator']}" />
+					<h:selectOneMenu pt:class="form-control"  id="coordinator" disabled="#{manageCourseController.readOnly}"
+									 value="#{manageCourseController.selectedEntity.coordinator}" 
+									 converter="#{coreController.academicConverter}" >
+						<f:selectItems value="#{coreController.teachers}" var="coordenador" 
 									   itemLabel="#{coordenador.name}" itemValue="#{coordenador}" />
-						<p:ajax  update="coordenadorField" />
+						<p:ajax  update="coordinatorField" />
 					</h:selectOneMenu>
 				</ui:decorate>
 			</h:panelGroup>
