--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -7,7 +7,7 @@
                 xmlns:jsf="http://xmlns.jcp.org/jsf"
                 template="/resources/#{coreInfo.decorator}/decorator.xhtml">
 
-	<ui:define name="title"><h:outputText value="#{msgs['title.login']}" /></ui:define>
+	<ui:define name="title"><h:outputText value="#{msgsCore['login.title']}" /></ui:define>
 
 
 	<ui:define name="body">
