--- a/WebContent/login/index.xhtml
+++ b/WebContent/login/index.xhtml
@@ -8,12 +8,19 @@
                 xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
                 template="/resources/#{coreInfo.decorator}/decorator.xhtml">
 	
-	<ui:define name="title"><h:outputText value="#{msgsCore['login.title']}" /></ui:define>
+	<ui:define name="head"></ui:define>
+	
+    <ui:define name="title"><h:outputText value="#{msgs['title.home']}" /></ui:define>
     
-    
-  	<ui:define name="body">
-		
-	</ui:define>
+    <ui:define name="description"><h:outputText value="#{coreInfo.quote}" /></ui:define>
+
+    <ui:define name="body">
+    	<div align="center" style="margin-top: 20px;">
+    		<h:outputLink value="http://gooie-duck.deviantart.com/art/Marvin-the-Paranoid-Android-192324294">
+    			<h:graphicImage library="default" name="images/marvin.jpg" style="border: 1px solid black;" />
+    		</h:outputLink>
+    	</div>
+    </ui:define>
 </ui:composition>
 
 	
