--- a/WebContent/core/manageAcademics/form.xhtml
+++ b/WebContent/core/manageAcademics/form.xhtml
@@ -9,26 +9,26 @@
 
 
 <ui:define name="title"> 
-	<h:outputText value="#{msgsCore['manageAcademic.title.create']}" 
-				  rendered="#{(! manageAcademicController.readOnly) and (manageAcademicController.selectedEntity.id == null)}" />
-   	<h:outputText value="#{msgsCore['manageAcademic.title.update']}" 
-   				  rendered="#{(! manageAcademicController.readOnly) and (manageAcademicController.selectedEntity.id != null)}" />
-    <h:outputText value="#{msgsCore['manageAcademic.title.retrieve']}" rendered="#{manageAcademicController.readOnly}" />
+	<h:outputText value="#{msgsCore['manageAcademics.title.create']}" 
+				  rendered="#{(! manageAcademicsController.readOnly) and (manageAcademicsController.selectedEntity.id == null)}" />
+   	<h:outputText value="#{msgsCore['manageAcademics.title.update']}" 
+   				  rendered="#{(! manageAcademicsController.readOnly) and (manageAcademicsController.selectedEntity.id != null)}" />
+    <h:outputText value="#{msgsCore['manageAcademics.title.retrieve']}" rendered="#{manageAcademicsController.readOnly}" />
 </ui:define>
 
 	
 <ui:define name="body">
 	<ui:decorate template="/resources/sae/form.xhtml">
-		<ui:param name="formName" value="#{msgsCore['manageAcademic.title.formulario']}" />
+		<ui:param name="formName" value="#{msgsCore['manageAcademics.title.form']}" />
 		<h:form id="form" pt:class="form-horizontal">
  
 				<h:panelGroup id="nomeField">
 					<ui:decorate template="/resources/sae/formfield.xhtml">
 						<ui:param name="fieldName" value="form:nome" />
-						<ui:param name="label" value="#{msgsCore['manageAcademic.title.name']}" />
-						<p:inputText id="nome" pt:class="form-control" disabled="#{manageAcademicController.readOnly  or (manageAcademicController.selectedEntity.id!=null)}" 
-									 pt:placeholder="#{msgsCore['manageAcademic.placeholder.name']}" 
-									 value="#{manageAcademicController.selectedEntity.name}"  required="true">
+						<ui:param name="label" value="#{msgsCore['manageAcademics.title.name']}" />
+						<p:inputText id="nome" pt:class="form-control" disabled="#{manageAcademicsController.readOnly  or (manageAcademicsController.selectedEntity.id!=null)}" 
+									 pt:placeholder="#{msgsCore['manageAcademics.placeholder.name']}" 
+									 value="#{manageAcademicsController.selectedEntity.name}"  required="true">
 							<p:ajax event="blur" update="nomeField" />
 						</p:inputText>
 					</ui:decorate>
@@ -37,10 +37,10 @@
 				<h:panelGroup id="emailField">
 					<ui:decorate template="/resources/sae/formfield.xhtml">
 						<ui:param name="fieldName" value="form:email" />
-						<ui:param name="label" value="#{msgsCore['manageAcademic.title.email']}" />
-						<h:inputText id="email" pt:class="form-control" disabled="#{manageAcademicController.readOnly}" 
-									 pt:type="email" pt:placeholder="#{msgsCore['manageAcademic.placeholder.email']}" 
-									 value="#{manageAcademicController.selectedEntity.email}"  required="true">
+						<ui:param name="label" value="#{msgsCore['manageAcademics.title.email']}" />
+						<h:inputText id="email" pt:class="form-control" disabled="#{manageAcademicsController.readOnly}" 
+									 pt:type="email" pt:placeholder="#{msgsCore['manageAcademics.placeholder.email']}" 
+									 value="#{manageAcademicsController.selectedEntity.email}"  required="true">
 							<p:ajax event="blur" update="emailField" />
 						</h:inputText> 
 					</ui:decorate>
@@ -50,10 +50,10 @@
 				<h:panelGroup id="shortNameField">
 					<ui:decorate template="/resources/sae/formfield.xhtml">
 						<ui:param name="fieldName" value="form:shortName" />
-						<ui:param name="label" value="#{msgsCore['manageAcademic.title.shortName']}" />
-						<p:inputText id="shortName" pt:class="form-control" disabled="#{manageAcademicController.readOnly  or (manageAcademicController.selectedEntity.id!=null)}" 
-									 pt:placeholder="#{msgsCore['manageAcademic.placeholder.shortName']}" 
-									 value="#{manageAcademicController.selectedEntity.shortName}"  required="true">
+						<ui:param name="label" value="#{msgsCore['manageAcademics.title.shortName']}" />
+						<p:inputText id="shortName" pt:class="form-control" disabled="#{manageAcademicsController.readOnly  or (manageAcademicsController.selectedEntity.id!=null)}" 
+									 pt:placeholder="#{msgsCore['manageAcademics.placeholder.shortName']}" 
+									 value="#{manageAcademicsController.selectedEntity.shortName}"  required="true">
 							<p:ajax event="blur" update="shortNameField" />
 						</p:inputText>
 					</ui:decorate>
@@ -66,9 +66,9 @@
 				<h:panelGroup id="academicTypeField">
 					<ui:decorate template="/resources/sae/formfield.xhtml">
 						<ui:param name="fieldName" value="form:academicType" />
-						<ui:param name="label" value="#{msgsCore['manageAcademic.title.academicType']}" />
-						<p:selectManyCheckbox id="academicType" converter="enumTypeConverter"  pt:class="form-control" disabled="#{manageAcademicController.readOnly  }"  
-									 value="#{manageAcademicController.selectedEntity.academicTypes}"  required="true">
+						<ui:param name="label" value="#{msgsCore['manageAcademics.title.academicType']}" />
+						<p:selectManyCheckbox id="academicType" converter="enumTypeConverter"  pt:class="form-control" disabled="#{manageAcademicsController.readOnly  }"  
+									 value="#{manageAcademicsController.selectedEntity.academicTypes}"  required="true">
 								<f:selectItems value="#{coreController.academicType}" var="type" itemLabel="#{type.label}" itemValue="#{type}" />
 						</p:selectManyCheckbox>
 					</ui:decorate>
@@ -80,7 +80,7 @@
 					<ui:decorate template="/resources/sae/formfield.xhtml">
 						<ui:param name="fieldName" value="form:password" />
 						<ui:param name="label" value="#{msgsCore['installSystem.field.admin.password']}" />
-						<p:password id="password" pt:class="form-control" minLength="6" value="#{manageAcademicController.selectedEntity.password}" disabled="#{manageAcademicController.readOnly  or (manageAcademicController.selectedEntity.id!=null)}"  required="true" promptLabel="#{msgs['password.prompt']}" weakLabel="#{msgs['password.weak']}" goodLabel="#{msgs['password.good']}" strongLabel="#{msgs['password.strong']}" />
+						<p:password id="password" pt:class="form-control" minLength="6" value="#{manageAcademicsController.selectedEntity.password}" disabled="#{manageAcademicsController.readOnly  or (manageAcademicsController.selectedEntity.id!=null)}"  required="true" promptLabel="#{msgs['password.prompt']}" weakLabel="#{msgs['password.weak']}" goodLabel="#{msgs['password.good']}" strongLabel="#{msgs['password.strong']}" />
 					</ui:decorate>
 				</h:panelGroup>
 				
@@ -90,15 +90,15 @@
 					<h:panelGroup class="form-group">	
 						<h:panelGroup class="col-sm-3"/>
             			<h:panelGroup class="col-sm-3" style="margin-bottom: 15px">
-            				<a class="btn btn-block btn-warning btn-social" jsf:immediate="true"  jsf:action="#{manageAcademicController.list}">
+            				<a class="btn btn-block btn-warning btn-social" jsf:immediate="true"  jsf:action="#{manageAcademicsController.list}">
             					<i class="fa fa-rotate-left"></i> 
             					<h:outputText value="#{msgs['crud.button.back']}"/>
             				</a>
                 		</h:panelGroup>
                 		<h:panelGroup class="col-sm-3"/>
 						<h:panelGroup class="col-sm-3">
-							<a  class="btn btn-block btn-info btn-social" jsf:action="#{manageAcademicController.save}" 
-								jsf:update=":form :globalMessages" jsf:rendered="#{!manageAcademicController.readOnly}"><i class="fa  fa-save"></i> 
+							<a  class="btn btn-block btn-info btn-social" jsf:action="#{manageAcademicsController.save}" 
+								jsf:update=":form :globalMessages" jsf:rendered="#{!manageAcademicsController.readOnly}"><i class="fa  fa-save"></i> 
 								<h:outputText value="#{msgs['crud.button.save']}"/>
 							</a>
                 		</h:panelGroup>
