--- a/WebContent/core/installSystem/index.xhtml
+++ b/WebContent/core/installSystem/index.xhtml
@@ -68,7 +68,7 @@
 				</ui:decorate>
 
 				<ui:decorate template="/resources/#{coreInfo.decorator}/formbuttonpanel-01.xhtml">
-					<p:commandButton action="#{installSystemController.registerAdministrator}" value="#{msgsCore['installSystem.button.registerAdministrator']}" update=":globalMessages form" icon="fa fa-fw fa-save" />
+					<p:commandButton pt:class="btn btn-block btn-success btn-social" action="#{installSystemController.registerAdministrator}" value="#{msgsCore['installSystem.button.registerAdministrator']}" update=":globalMessages form" icon="fa fa-fw fa-save" />
 				</ui:decorate>
 			</ui:decorate>
 		</h:panelGroup>
