--- a/WebContent/core/manageAcademics/form.xhtml
+++ b/WebContent/core/manageAcademics/form.xhtml
@@ -25,6 +25,7 @@
 		<ui:decorate template="/resources/#{coreInfo.decorator}/form.xhtml">
 			<ui:param name="formName" value="form" />
 			<ui:param name="formLabel" value="#{msgsCore['manageAcademics.form.title']}" />
+			<p:hotkey bind="#{msgs['jbutler.crud.hotkey.focusFirstField']}" handler="findObjectById('form:name').focus();" />
 
 			<ui:decorate template="/resources/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="name" />
@@ -65,11 +66,13 @@
 					<p:commandButton id="cancelButton" action="#{manageAcademicsController.list}" value="#{msgs['jbutler.crud.button.cancel']}" immediate="true" icon="fa fa-fw fa-close" />
 					<p:commandButton id="saveButton" action="#{manageAcademicsController.save}" value="#{msgs['jbutler.crud.button.save']}" update=":form :globalMessages" icon="fa fa-fw fa-save" />
 					<p:defaultCommand target="saveButton" />
+					<p:hotkey bind="#{msgs['jbutler.crud.hotkey.backToList']}" action="#{manageAcademicsController.list}" immediate="true" />
 				</ui:decorate>
 			</h:panelGroup>
 			<h:panelGroup rendered="#{manageAcademicsController.readOnly}">
 				<ui:decorate template="/resources/#{coreInfo.decorator}/formbuttonpanel-01.xhtml">
 					<p:commandButton id="backButton" action="#{manageAcademicsController.list}" value="#{msgs['jbutler.crud.button.back']}" immediate="true" icon="fa fa-fw fa-arrow-circle-left" />
+					<p:hotkey bind="#{msgs['jbutler.crud.hotkey.backToList']}" action="#{manageInstitutionsController.list}" immediate="true" />
 				</ui:decorate>
 			</h:panelGroup>
 		</ui:decorate>
