--- a/WebContent/core/manageAcademics/form.xhtml
+++ b/WebContent/core/manageAcademics/form.xhtml
@@ -63,7 +63,7 @@
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="roles" />
 				<ui:param name="label" value="#{msgsCore['manageAcademics.field.roles']}" />
-				<p:autoComplete id="roles" multiple="true" value="#{manageAcademicsController.selectedRoles}" completeMethod="#{manageAcademicsController.completeRoles}" var="role" itemLabel="#{role.name}" itemValue="#{role}" converter="#{manageAcademicsController.roleConverter}" forceSelection="true">
+				<p:autoComplete id="roles" multiple="true" value="#{manageAcademicsController.selectedRoles}" completeMethod="#{manageAcademicsController.completeRoles}" var="role" itemLabel="#{role.name}" itemValue="#{role}" converter="#{manageAcademicsController.roleConverter}" forceSelection="true" disabled="#{manageAcademicsController.readOnly}">
 					<p:column>
 						<h:outputText value="#{role.name}" />
 					</p:column>
@@ -72,6 +72,36 @@
 					</p:column>
 				</p:autoComplete>			
 			</ui:decorate>
+
+			<h:panelGroup rendered="#{manageAcademicsController.readOnly}">
+				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
+					<ui:param name="fieldName" value="creationDate" />
+					<ui:param name="label" value="#{msgsCore['manageAcademics.field.creationDate']}" />
+					<p:inputText id="creationDate" value="#{manageAcademicsController.selectedEntity.creationDate}" disabled="true">
+						<f:convertDateTime type="date" pattern="#{msgs['jbutler.format.datetime.java']}" />
+					</p:inputText>
+				</ui:decorate>
+			</h:panelGroup>
+
+			<h:panelGroup rendered="#{manageAcademicsController.readOnly}">
+				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
+					<ui:param name="fieldName" value="lastUpdateDate" />
+					<ui:param name="label" value="#{msgsCore['manageAcademics.field.lastUpdateDate']}" />
+					<p:inputText id="lastUpdateDate" value="#{manageAcademicsController.selectedEntity.lastUpdateDate}" disabled="true">
+						<f:convertDateTime type="date" pattern="#{msgs['jbutler.format.datetime.java']}" />
+					</p:inputText>
+				</ui:decorate>
+			</h:panelGroup>
+
+			<h:panelGroup rendered="#{manageAcademicsController.readOnly}">
+				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
+					<ui:param name="fieldName" value="lastLoginDate" />
+					<ui:param name="label" value="#{msgsCore['manageAcademics.field.lastLoginDate']}" />
+					<p:inputText id="lastLoginDate" value="#{manageAcademicsController.selectedEntity.lastLoginDate}" disabled="true">
+						<f:convertDateTime type="date" pattern="#{msgs['jbutler.format.datetime.java']}" />
+					</p:inputText>
+				</ui:decorate>
+			</h:panelGroup>
 
 			<h:panelGroup rendered="#{! manageAcademicsController.readOnly}">
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formbuttonpanel-02.xhtml">
