Fix 3rd bug in #6. Close #6.
"The User Management menu should be open when this use case is active."

--- a/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
+++ b/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
+				xmlns:c="http://java.sun.com/jsp/jstl/core"
 				xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html"
@@ -16,10 +17,11 @@
 		<li><h:link outcome="/core/login/index" rendered="#{coreInfo.systemInstalled and not sessionController.loggedIn}"><i class="fa fa-key"></i> <span><h:outputText value="#{msgsCore['core.menu.login']}" /></span></h:link></li>
 		
 		<!-- User management (Admin only). -->
+		<c:set var="menuOpen" value="#{request.requestURL.indexOf('/manageAcademics') != -1}" />
 		<h:panelGroup rendered="#{sessionController.admin}">
-			<li class="treeview">
+			<li class="treeview #{menuOpen ? 'active' : ''}">
 				<a href="#"><i class="fa fa-users"></i> <span><h:outputText value="#{msgsCore['core.menu.userManagement']}" /></span> <i class="fa fa-angle-left pull-right"></i></a>
-				<ul class="treeview-menu" style="display: none;">
+				<ul class="treeview-menu #{menuOpen ? 'menu-open' : ''}" style="display: #{menuOpen ? 'block' : 'none'};">
 					<li><h:link outcome="/core/manageAcademics/list"><h:outputText value="#{msgsCore['core.menu.userManagement.manageAcademics']}" /></h:link></li>
 				</ul>
 			</li>
