--- a/WebContent/core/manageAcademics/form.xhtml
+++ b/WebContent/core/manageAcademics/form.xhtml
@@ -26,6 +26,7 @@
 			<ui:param name="formLabel" value="#{msgsCore['manageAcademics.form.title']}" />
 			<p:hotkey bind="#{msgs['jbutler.crud.hotkey.focusFirstField']}" handler="findObjectById('form:name').focus();" />
 
+			<!-- Field: name. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="name" />
 				<ui:param name="label" value="#{msgsCore['manageAcademics.field.name']}" />
@@ -34,6 +35,25 @@
 				</p:inputText>
 			</ui:decorate>
 
+			<!-- Field: email. -->
+			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
+				<ui:param name="fieldName" value="email" />
+				<ui:param name="label" value="#{msgsCore['manageAcademics.field.email']}" />
+				<p:inputText id="email" value="#{manageAcademicsController.selectedEntity.email}" required="true" disabled="#{manageAcademicsController.readOnly}">
+					<p:ajax event="blur" update="emailField" />
+				</p:inputText>
+			</ui:decorate>
+
+			<!-- Field: shortName. -->
+			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
+				<ui:param name="fieldName" value="shortName" />
+				<ui:param name="label" value="#{msgsCore['manageAcademics.field.shortName']}" />
+				<p:inputText id="shortName" value="#{manageAcademicsController.selectedEntity.shortName}" required="true" pt:placeholder="#{msgsCore['manageAcademics.field.shortName.placeholder']}" disabled="#{manageAcademicsController.readOnly}">
+					<p:ajax event="blur" update="shortNameField" />
+				</p:inputText>
+			</ui:decorate>
+
+			<!-- Field: birthDate. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="birthDate" />
 				<ui:param name="label" value="#{msgsCore['manageAcademics.field.birthDate']}" />
@@ -44,22 +64,7 @@
 				<h:outputText value=" (#{msgs['jbutler.format.date.label']})" />
 			</ui:decorate>
 
-			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-				<ui:param name="fieldName" value="shortName" />
-				<ui:param name="label" value="#{msgsCore['manageAcademics.field.shortName']}" />
-				<p:inputText id="shortName" value="#{manageAcademicsController.selectedEntity.shortName}" required="true" pt:placeholder="#{msgsCore['manageAcademics.field.shortName.placeholder']}" disabled="#{manageAcademicsController.readOnly}">
-					<p:ajax event="blur" update="shortNameField" />
-				</p:inputText>
-			</ui:decorate>
-
-			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
-				<ui:param name="fieldName" value="email" />
-				<ui:param name="label" value="#{msgsCore['manageAcademics.field.email']}" />
-				<p:inputText id="email" value="#{manageAcademicsController.selectedEntity.email}" required="true" disabled="#{manageAcademicsController.readOnly}">
-					<p:ajax event="blur" update="emailField" />
-				</p:inputText>
-			</ui:decorate>
-
+			<!-- Field: roles. -->
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 				<ui:param name="fieldName" value="roles" />
 				<ui:param name="label" value="#{msgsCore['manageAcademics.field.roles']}" />
@@ -73,6 +78,16 @@
 				</p:autoComplete>			
 			</ui:decorate>
 
+			<!-- Field: lattesId. -->
+			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
+				<ui:param name="fieldName" value="lattesId" />
+				<ui:param name="label" value="#{msgsCore['manageAcademics.field.lattesId']}" />
+				<p:inputText id="lattesId" value="#{manageAcademicsController.selectedEntity.lattesId}" required="false" pt:placeholder="#{msgsCore['manageAcademics.field.lattesId.placeholder']}" disabled="#{manageAcademicsController.readOnly}">
+					<p:ajax event="blur" update="lattesIdField" />
+				</p:inputText>
+			</ui:decorate>
+
+			<!-- Field: creationDate. -->
 			<h:panelGroup rendered="#{manageAcademicsController.readOnly}">
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 					<ui:param name="fieldName" value="creationDate" />
@@ -83,6 +98,7 @@
 				</ui:decorate>
 			</h:panelGroup>
 
+			<!-- Field: lastUpdateDate. -->
 			<h:panelGroup rendered="#{manageAcademicsController.readOnly}">
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 					<ui:param name="fieldName" value="lastUpdateDate" />
@@ -93,6 +109,7 @@
 				</ui:decorate>
 			</h:panelGroup>
 
+			<!-- Field: lastLoginDate. -->
 			<h:panelGroup rendered="#{manageAcademicsController.readOnly}">
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 					<ui:param name="fieldName" value="lastLoginDate" />
