Implement basic parsing of Lattes CV (related to #7)
Classes brought from pg_thiago branch, adjustments made. So far, the CV
can be uploaded and parsed into generic Lattes publications. Domain
objects not created yet.

--- a/WebContent/WEB-INF/decorators/admin-lte/form.xhtml
+++ b/WebContent/WEB-INF/decorators/admin-lte/form.xhtml
@@ -14,11 +14,10 @@
 		</div>
 		<div class="box-body">
 			<f:validateBean>
-				<h:form id="#{formName}" pt:class="form-horizontal">
+				<h:form id="#{formName}" pt:class="form-horizontal" enctype="#{formFileUpload ? 'multipart/form-data' : 'text/plain'}">
 					<ui:insert />
 				</h:form>
 			</f:validateBean>
 		</div>
 	</div>
-
 </ui:composition>
