--- a/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
+++ b/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
@@ -16,13 +16,24 @@
 		<li><h:commandLink action="#{installSystemController.begin}" rendered="#{not coreInfo.systemInstalled}"><i class="fa fa-cogs"></i> <span><h:outputText value="#{msgsCore['core.menu.installSystem']}" /></span></h:commandLink></li>
 		<li><h:link outcome="/core/login/index" rendered="#{coreInfo.systemInstalled and not sessionController.loggedIn}"><i class="fa fa-key"></i> <span><h:outputText value="#{msgsCore['core.menu.login']}" /></span></h:link></li>
 		
-		<!-- User management (Admin only). -->
-		<c:set var="menuOpen" value="#{request.requestURL.indexOf('/manageAcademics') != -1}" />
+		<!-- User management (Admins only). -->
+		<c:set var="menuOpen" value="#{request.requestURL.indexOf('/manageAcademics/') != -1}" />
 		<h:panelGroup rendered="#{sessionController.admin}">
 			<li class="treeview #{menuOpen ? 'active' : ''}">
 				<a href="#"><i class="fa fa-users"></i> <span><h:outputText value="#{msgsCore['core.menu.userManagement']}" /></span> <i class="fa fa-angle-left pull-right"></i></a>
 				<ul class="treeview-menu #{menuOpen ? 'menu-open' : ''}" style="display: #{menuOpen ? 'block' : 'none'};">
 					<li><h:link outcome="/core/manageAcademics/list"><h:outputText value="#{msgsCore['core.menu.userManagement.manageAcademics']}" /></h:link></li>
+				</ul>
+			</li>
+		</h:panelGroup>
+		
+		<!-- Research (Professors and Admins). -->
+		<c:set var="menuOpen" value="#{request.requestURL.indexOf('/research/') != -1}" />
+		<h:panelGroup rendered="#{sessionController.admin or sessionController.professor}">
+			<li class="treeview #{menuOpen ? 'active' : ''}">
+				<a href="#"><i class="fa fa-search"></i> <span><h:outputText value="#{msgsResearch['core.menu.research']}" /></span> <i class="fa fa-angle-left pull-right"></i></a>
+				<ul class="treeview-menu #{menuOpen ? 'menu-open' : ''}" style="display: #{menuOpen ? 'block' : 'none'};">
+					<li><h:link outcome="/research/uploadLattesCV/index"><h:outputText value="#{msgsResearch['core.menu.research.uploadLattesCV']}" /></h:link></li>
 				</ul>
 			</li>
 		</h:panelGroup>
