--- a/WebContent/research/uploadLattesCV/index.xhtml
+++ b/WebContent/research/uploadLattesCV/index.xhtml
@@ -15,7 +15,7 @@
   	<ui:define name="body">
 		<p><h:outputText value="#{msgsResearch['uploadLattesCV.text.instructions.upload']}" /></p>
 
-		<!-- The form to be filled with information on the administrator. -->
+		<!-- The form to be filled in with the file to upload. -->
 		<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/form.xhtml">
 			<ui:param name="formName" value="form" /> 
 			<ui:param name="formLabel" value="#{msgsResearch['uploadLattesCV.form.upload']}" />
