--- a/WebContent/core/changePassword/index.xhtml
+++ b/WebContent/core/changePassword/index.xhtml
@@ -7,13 +7,16 @@
                 xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
                 xmlns:jsf="http://xmlns.jcp.org/jsf"
                 template="/WEB-INF/decorators/#{coreInfo.decorator}/decorator.xhtml">
-	
+	<f:metadata>
+	    <f:viewParam name="code" value="#{changePasswordController.passwordCode}" />
+	</f:metadata>	
+
 	<ui:define name="title"><h:outputText value="#{msgsCore['changePassword.title']}" /></ui:define>
     
     <ui:define name="description"><h:outputText value="#{msgsCore['changePassword.title.description']}" /></ui:define>
 
   	<ui:define name="body">
-  		<p>TODO: work in progress...</p>
+  		<p>Password code: <h:outputText value="#{changePasswordController.passwordCode}" /></p>
 	</ui:define>
 </ui:composition>
 
