Rename "change passwd" to "set new passwd". Add reset button to login.
Related to #2. "Change password" is the feature used by an authenticated
user. The password set through a reset password link is now called "set
new password". UML documentation updated.

--- a/WebContent/core/changePassword/index.xhtml
+++ b/WebContent/core/changePassword/index.xhtml
@@ -48,7 +48,7 @@
 				</ui:decorate>
 
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formbuttonpanel-01.xhtml">
-					<p:commandButton action="#{changePasswordController.changePassword}" value="#{msgsCore['changePassword.button.new']}" update=":globalMessages form" icon="fa fa-fw fa-save" />
+					<p:commandButton action="#{changePasswordController.setNewPassword}" value="#{msgsCore['changePassword.button.new']}" update=":globalMessages form" icon="fa fa-fw fa-save" />
 				</ui:decorate>
 			</ui:decorate>
 		</h:panelGroup>
