--- a/WebContent/core/manageCourseCoordinations/form.xhtml
+++ b/WebContent/core/manageCourseCoordinations/form.xhtml
@@ -66,7 +66,7 @@
 				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
 					<ui:param name="fieldName" value="endDate" />
 					<ui:param name="label" value="#{msgsCore['manageCourseCoordinations.field.endDate']}" />
-					<p:inputText id="lastUpdateDate" value="#{manageCourseCoordinationsController.selectedEntity.endDate}" disabled="true">
+					<p:inputText id="endDate" value="#{manageCourseCoordinationsController.selectedEntity.endDate}" disabled="true">
 						<f:convertDateTime type="date" pattern="#{msgs['jbutler.format.datetime.java']}" />
 					</p:inputText>
 				</ui:decorate>
